## ----------------------------------------------------------------------- ##
## Version 0.2.1
## ----------------------------------------------------------------------- ##
- Allow matrix as input data in R version

## ----------------------------------------------------------------------- ##
## Version 0.2.0
## ----------------------------------------------------------------------- ##
- Fix prediction of classification forests in R

## ----------------------------------------------------------------------- ##
## Version 0.1.9
## ----------------------------------------------------------------------- ##
- Speedup growing for continuous covariates
- Add memory save option to save memory for very large datasets (but slower)
- Remove memory mode option from R version since no performance gain

## ----------------------------------------------------------------------- ##
## Version 0.1.8
## ----------------------------------------------------------------------- ##
- Fix problems when using Rcpp <0.11.4

## ----------------------------------------------------------------------- ##
## Version 0.1.7
## ----------------------------------------------------------------------- ##
- Add option to split on unordered categorical covariates

## ----------------------------------------------------------------------- ##
## Version 0.1.6
## ----------------------------------------------------------------------- ##
- Optimize memory management for very large survival forests

## ----------------------------------------------------------------------- ##
## Version 0.1.5
## ----------------------------------------------------------------------- ##
- Set required Rcpp version to 0.11.2
- Fix large $call objects when using BatchJobs
- Add details and example on GenABEL usage to documentation
- Minor changes to documentation

## ----------------------------------------------------------------------- ##
## Version 0.1.4