@@ -1,7 +1,7 @@
 Package: ranger
 Type: Package
 Title: A fast implementation of Random Forests
-Version: 0.2.1.42
+Version: 0.2.1.45
 Date: 2015-04-23
 Author: Marvin N. Wright
 Maintainer: Marvin N. Wright <wright@imbs.uni-luebeck.de>
