@@ -1,4 +1,10 @@
 ## ----------------------------------------------------------------------- ##
+## Version Next
+## ----------------------------------------------------------------------- ##
+- Remove recursive splitting
+- Pre-allocate space for counters
+
+## ----------------------------------------------------------------------- ##
 ## Version 0.2.1
 ## ----------------------------------------------------------------------- ##
 - Allow matrix as input data in R version
